--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -1,10 +1,49 @@
 body {
     margin: auto;
     text-align: center;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: 'Segoe UI';
 }
 
-input, button {
+#navbar {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    box-shadow: 0 20px 40px 0 rgba(0,0,0,0.2);
+    padding: 0px 20px;
+    margin-bottom: 70px;
+}
+
+#site-home {
+    display: flex;
+    align-items: center;
+    color: black;
+    text-decoration: none;
+}
+
+#site-home > h1 {
+    display: inline;
+}
+
+#site-home > img {
+    display: block;
+    height: 2rem;
+    padding-right: 10px;
+}
+
+#theme-toggle {
+    width: 1.5em;
+    height: 1.5rem;
+    text-wrap: nowrap;
+    cursor: pointer;
+}
+
+.theme-icon {
+    width: 100%;
+    height: 100%;
+    font-size: 1.5rem;
+}
+
+input[type="file"], button {
     font-family: inherit;
     font-size: inherit;
     cursor: pointer;
@@ -32,37 +71,11 @@ input[type="file"]::file-selector-button {
     cursor: pointer;
 }
 
-#advanced-options {
-    cursor: pointer;
-}
-
-.tooltip {
-    position: relative;
-    display: inline-block;
-    color: gray;
-}
-
-.tooltip .tooltiptext {
-    visibility: hidden;
-    width: 120px;
-    background-color: #555;
-    color: #fff;
-    text-align: center;
-    padding: 5px 0;
+#format-select {
+    padding: 0.1rem;
+    background: #f4f4f4;
     border-radius: 5px;
-
-    /* Position the tooltip */
-    position: absolute;
-    z-index: 1;
-    bottom: 125%;
-    left: 50%;
-    margin-left: -60px;
-}
-
-/* Show tooltip on hover */
-.tooltip:hover .tooltiptext {
-    visibility: visible;
-    opacity: 1;
+    cursor: pointer;
 }
 
 #submit-convert {
@@ -102,9 +115,17 @@ ul {
     margin-right: 10%;
 }
 
+footer {
+    color: #808080;
+}
+
 @media only screen and (min-width: 900px) {
     #about, #file-select {
         margin-left: 30%;
         margin-right: 30%;
+    }
+
+    #navbar {
+        padding: 0px 30%;
     }
 }
