--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -10,7 +10,7 @@ body {
     justify-content: space-between;
     box-shadow: 0 20px 40px 0 rgba(0,0,0,0.2);
     padding: 0px 20px;
-    margin-bottom: 70px;
+    margin-bottom: 100px;
 }
 
 #site-home {
@@ -105,14 +105,32 @@ input[type="file"]::file-selector-button {
     display: none;
 }
 
-/* Center bullet point as well as list item. */
-ul {
-    list-style-position: inside;
+#download-again {
+    display: none;
+}
+
+#download-again-link {
+    color: black;
 }
 
 #about {
     margin-left: 10%;
     margin-right: 10%;
+}
+
+table {
+    border-collapse: collapse;
+    margin: auto;
+}
+
+th {
+    border-bottom: 2px solid black;
+    padding: 5px 20px 5px 20px;
+}
+
+td {
+    padding-top: 2px;
+    padding-bottom: 2px;
 }
 
 footer {
